# microchassis

./: .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: onpush.yaml
exampleservice/: Cargo.toml  build.rs
exampleservice/proto/: exampleservice.proto
exampleservice/src/: main.rs  proto.rs  user_service.rs
microchassis/: Cargo.toml  build.rs
microchassis-build/: Cargo.toml
microchassis/src/: allocator.rs  error.rs  jemalloc.rs  jeprof.rs  lib.rs  logging.rs  mallctl.rs  metrics.rs  oompanic.rs  runtime.rs  signals.rs  tracing.rs
microchassis/src/profiling/: jeprof.rs  mallctl.rs  mod.rs
src/: error.rs  lib.rs  signals.rs  tracing.rs
