[package]
name = "microchassis"
description = "[WIP] Chassis for Rust Microservices"
version = "0.1.0"
edition = "2021"
authors = ["Folke Behrens <folke@gmail.com>"]
repository = "https://github.com/cloneable/microchassis"
license = "Apache-2.0"
exclude = [".gitignore", ".github", "target"]

[dependencies]
