[package]
name = "microchassis"
description = "[WIP] Chassis for Rust Microservices"
version = "0.1.0"
edition = "2021"
authors = ["Folke Behrens <folke@gmail.com>"]
repository = "https://github.com/cloneable/microchassis"
license = "Apache-2.0"
exclude = [".gitignore", ".github", "target"]

[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = ["std"]
std = []

[workspace]
members = ["exampleservice"]
