[package]
name = "exampleservice"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
microchassis = { path = "../microchassis" }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
tonic-health = "0.7"
tonic-reflection = "0.5"
tracing = "0.1"

[build-dependencies]
microchassis-build = { path = "../microchassis-build" }
tonic-build = "0.8"
