[package]
name = "microchassis"
description = "[WIP] Chassis for Rust Services"
version = "0.0.4"
edition = "2021"
authors = ["Folke B."]
repository = "https://github.com/cloneable/microchassis"
license = "Apache-2.0"
exclude = [".gitignore", ".github", "target"]
rust-version = "1.65"

[dependencies]
http = "0.2"
lazy_static = "1"
libc = { version = "0.2", optional = true }
rustc-demangle = "0.1"
tempfile = "3"
thiserror = "1"
tikv-jemalloc-ctl = "0.5"
tikv-jemalloc-sys = "0.5"
tikv-jemallocator = { version = "0.5", features = ["profiling", "stats"] }
tracing = { version = "0.1" }

[features]
default = ["std", "jemalloc-profiling", "set-jemalloc-global"]
std = ["tikv-jemalloc-ctl/use_std"]
jemalloc-profiling = []
oompanic-allocator = []
set-jemalloc-global = []
disable_aslr = ["dep:libc"]

[[bin]]
name = "disable_aslr"
required-features = ["disable_aslr"]
