[package]
name = "microchassis"
description = "A chassis to increase observability of services and tools"
version = "0.0.6"
edition = "2021"
authors = ["Folke B."]
repository = "https://github.com/cloneable/microchassis"
license = "Apache-2.0"
exclude = [".gitignore", ".github", "target"]
rust-version = "1.65"

[dependencies]
backtrace = { version = "0.3", optional = true }
http = "1"
lazy_static = "1"
libc = { version = "0.2", optional = true }
tempfile = "3"
thiserror = "1"
tikv-jemalloc-ctl = "0.6"
tikv-jemalloc-sys = "0.6"
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }
tracing = { version = "0.1" }
actix-web = { version = "4", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["std", "jemalloc-profiling", "set-jemalloc-global"]
std = ["tikv-jemalloc-ctl/use_std"]
jemalloc-profiling = ["dep:backtrace"]
oompanic-allocator = []
set-jemalloc-global = []
disable_aslr = ["dep:libc"]
actix-handlers = ["dep:actix-web", "dep:futures-util"]

[[bin]]
name = "disable_aslr"
required-features = ["disable_aslr"]
